// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (sass): source map 1`] = `
Object {
  "file": "style.css.map",
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "sass/language.sass",
    "sass/another/variables.sass",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\"
@import \\"./file.css\\"

$font-stack:    Helvetica, sans-serif
$primary-color: #333
$pi:            '\\\\e0C6'

body
  font: 100% $font-stack
  color: $primary-color

nav
  ul
    margin: 0
    padding: 0
    list-style: none

  li
    display: inline-block

  a
    display: block
    padding: 6px 12px
    text-decoration: none

=border-radius($radius)
  -webkit-border-radius: $radius
  -moz-border-radius:    $radius
  -ms-border-radius:     $radius
  border-radius:         $radius

.box
  +border-radius(10px)

.message
  border: 1px solid #ccc
  padding: 10px
  color: #333

.success
  @extend .message
  border-color: green

.error
  @extend .message
  border-color: red

.warning
  @extend .message
  border-color: yellow

.foo
  &:before
    content: $pi

.bar
  &:before
    content: $n-ary-summation

",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (scss): source map 1`] = `
Object {
  "file": "style.css.map",
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "scss/language.scss",
    "scss/another/_variables.scss",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\";
@import \\"./file.css\\";

$font-stack:    Helvetica, sans-serif;
$primary-color: #333;
$pi:            '\\\\e0C6';

body {
  font: 100% $font-stack;
  color: $primary-color;
}

nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
  }
}

@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

.box { @include border-radius(10px); }

.foo {
  &:before {
    content: $pi;
  }
}

.bar {
  &:before {
    content: $n-ary-summation;
  }
}
",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (sass): source map 1`] = `
Object {
  "file": "style.css.map",
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "sass/language.sass",
    "sass/another/variables.sass",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (scss): source map 1`] = `
Object {
  "file": "style.css.map",
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "scss/language.scss",
    "scss/another/_variables.scss",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "false" value, but the "sassOptions.sourceMap" has the "true" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\"
@import \\"./file.css\\"

$font-stack:    Helvetica, sans-serif
$primary-color: #333
$pi:            '\\\\e0C6'

body
  font: 100% $font-stack
  color: $primary-color

nav
  ul
    margin: 0
    padding: 0
    list-style: none

  li
    display: inline-block

  a
    display: block
    padding: 6px 12px
    text-decoration: none

=border-radius($radius)
  -webkit-border-radius: $radius
  -moz-border-radius:    $radius
  -ms-border-radius:     $radius
  border-radius:         $radius

.box
  +border-radius(10px)

.message
  border: 1px solid #ccc
  padding: 10px
  color: #333

.success
  @extend .message
  border-color: green

.error
  @extend .message
  border-color: red

.warning
  @extend .message
  border-color: yellow

.foo
  &:before
    content: $pi

.bar
  &:before
    content: $n-ary-summation

",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\";
@import \\"./file.css\\";

$font-stack:    Helvetica, sans-serif;
$primary-color: #333;
$pi:            '\\\\e0C6';

body {
  font: 100% $font-stack;
  color: $primary-color;
}

nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
  }
}

@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

.box { @include border-radius(10px); }

.foo {
  &:before {
    content: $pi;
  }
}

.bar {
  &:before {
    content: $n-ary-summation;
  }
}
",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "false" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\"
@import \\"./file.css\\"

$font-stack:    Helvetica, sans-serif
$primary-color: #333
$pi:            '\\\\e0C6'

body
  font: 100% $font-stack
  color: $primary-color

nav
  ul
    margin: 0
    padding: 0
    list-style: none

  li
    display: inline-block

  a
    display: block
    padding: 6px 12px
    text-decoration: none

=border-radius($radius)
  -webkit-border-radius: $radius
  -moz-border-radius:    $radius
  -ms-border-radius:     $radius
  border-radius:         $radius

.box
  +border-radius(10px)

.message
  border: 1px solid #ccc
  padding: 10px
  color: #333

.success
  @extend .message
  border-color: green

.error
  @extend .message
  border-color: red

.warning
  @extend .message
  border-color: yellow

.foo
  &:before
    content: $pi

.bar
  &:before
    content: $n-ary-summation

",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\";
@import \\"./file.css\\";

$font-stack:    Helvetica, sans-serif;
$primary-color: #333;
$pi:            '\\\\e0C6';

body {
  font: 100% $font-stack;
  color: $primary-color;
}

nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
  }
}

@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

.box { @include border-radius(10px); }

.foo {
  &:before {
    content: $pi;
  }
}

.bar {
  &:before {
    content: $n-ary-summation;
  }
}
",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value has "true" value and the "devtool" option has "source-map" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\"
@import \\"./file.css\\"

$font-stack:    Helvetica, sans-serif
$primary-color: #333
$pi:            '\\\\e0C6'

body
  font: 100% $font-stack
  color: $primary-color

nav
  ul
    margin: 0
    padding: 0
    list-style: none

  li
    display: inline-block

  a
    display: block
    padding: 6px 12px
    text-decoration: none

=border-radius($radius)
  -webkit-border-radius: $radius
  -moz-border-radius:    $radius
  -ms-border-radius:     $radius
  border-radius:         $radius

.box
  +border-radius(10px)

.message
  border: 1px solid #ccc
  padding: 10px
  color: #333

.success
  @extend .message
  border-color: green

.error
  @extend .message
  border-color: red

.warning
  @extend .message
  border-color: yellow

.foo
  &:before
    content: $pi

.bar
  &:before
    content: $n-ary-summation

",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "sourcesContent": Array [
    "@import \\"another/variables\\";
@import \\"./file.css\\";

$font-stack:    Helvetica, sans-serif;
$primary-color: #333;
$pi:            '\\\\e0C6';

body {
  font: 100% $font-stack;
  color: $primary-color;
}

nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
  }
}

@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

.box { @include border-radius(10px); }

.foo {
  &:before {
    content: $pi;
  }
}

.bar {
  &:before {
    content: $n-ary-summation;
  }
}
",
    "$n-ary-summation: '\\\\2211'
",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (sass): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AAQd;EACE;EACA;EACA;;AAEF;EACE;;AAEF;EACE;EACA;EACA;;;AAQJ;EALE,uBAMe;EALf,oBAKe;EAJf,mBAIe;EAHf,eAGe;;;AAEjB;EACE;EACA;EACA;;;AAEF;EAEE;;;AAEF;EAEE;;;AAEF;EAEE;;;AAGA;EACE,SAhDY;;;AAmDd;EACE,SCzDc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/sass/language.sass",
    "test/sass/another/variables.sass",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (scss): source map 1`] = `
Object {
  "mappings": ";AACQ;AAMR;EACE;EACA,OALc;;;AASd;EACE;EACA;EACA;;AAGF;EAAK;;AAEL;EACE;EACA;EACA;;;AAWJ;EANE,uBAM4B;EALzB,oBAKyB;EAJxB,mBAIwB;EAHpB,eAGoB;;;AAG5B;EACE,SAlCY;;;AAuCd;EACE,SC7Cc",
  "names": Array [],
  "sourceRoot": "",
  "sources": Array [
    "test/scss/language.scss",
    "test/scss/another/_variables.scss",
  ],
  "version": 3,
}
`;

exports[`sourceMap option should generate source maps when value is not specified and the "devtool" option has "source-map" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "false" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value has "false" value and the "devtool" option has "source-map" value (sass-embedded) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (dart-sass) (scss): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (sass): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.message, .warning, .error, .success {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  border-color: green;
}

.error {
  border-color: red;
}

.warning {
  border-color: yellow;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (sass): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (sass): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (sass): warnings 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (scss): css 1`] = `
"@charset \\"UTF-8\\";
@import \\"./file.css\\";
body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}

nav ul {
  margin: 0;
  padding: 0;
  list-style: none;
}
nav li {
  display: inline-block;
}
nav a {
  display: block;
  padding: 6px 12px;
  text-decoration: none;
}

.box {
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  -ms-border-radius: 10px;
  border-radius: 10px;
}

.foo:before {
  content: \\"\\\\e0c6\\";
}

.bar:before {
  content: \\"∑\\";
}"
`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (scss): errors 1`] = `Array []`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (scss): source map 1`] = `undefined`;

exports[`sourceMap option should not generate source maps when value is not specified and the "devtool" option has "false" value (sass-embedded) (scss): warnings 1`] = `Array []`;
